@@ -71,7 +71,7 @@ h5 {
     right:0px;
     top:60px;
     padding:12px;
-    width:225px;
+    width:255px;
     color:#9d9d9d;
     border:1px solid;
     border-color:#777777;
